--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: php
-
-php:
-  - 5.3
-  - 5.4
-
+# command to let run a real GUI application or web browser
+before_install:
+- "export DISPLAY=:99.0"
+- "sh -e /etc/init.d/xvfb start"
+- chmod +x phpUtils/phpunit
+- export PATH=$PATH:phpUtils/
+before_script:
+- java -jar phpUtils/selenium-server.jar &
+- sleep 20
 script:
-  - phpunit
-  - php coverage-checker.php clover.xml 75
+- phpunit test.php
